# calorie-calculator

./: .gitignore  README.md
.cursor/rules/: fastapi-rule.mdc
backend/: .env.example  README.md  pyproject.toml  requirements-lock.txt  requirements.txt  setup_env.sh  start.sh
backend/app/: main.py
backend/app/api/: food_recognition.py
backend/app/models/: food.py
backend/app/services/: gpt_service.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  start.sh  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: About.tsx  Home.tsx  NotFound.tsx
frontend/src/services/: foodService.ts
